--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -9,6 +9,7 @@
 
     <title>Quickquill</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
+    <link href="//cdn.quilljs.com/1.2.3/quill.snow.css" rel="stylesheet">
   </head>
 
   <body>
